--- a/overlay/PixelSetupWizardSpacewar/res/values-es/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bc_welcome_message">Te damos la bienvenida a tu Nothing</string>
-    <string name="deferred_setup_wizard_title">Finaliza la configuración de tu PixysOS</string>
+    <string name="deferred_setup_wizard_title">Finaliza la configuración de tu Evolution X</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">Configuración del PixysOS</string>
+    <string name="setup_wizard_title">Configuración del Evolution X</string>
 </resources>
