--- a/overlay/PixelSetupWizardSpacewar/res/values-nb/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values-nb/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bc_welcome_message">Velkommen til Nothing</string>
-    <string name="deferred_setup_wizard_title">Fullfør konfigureringen av PixysOS</string>
+    <string name="deferred_setup_wizard_title">Fullfør konfigureringen av Evolution X</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">PixysOS-konfigurering</string>
+    <string name="setup_wizard_title">Evolution X-konfigurering</string>
 </resources>
