--- a/overlay/PixelSetupWizardSpacewar/res/values-sl/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values-sl/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bc_welcome_message">Pozdravljeni v telefonu Nothing</string>
-    <string name="deferred_setup_wizard_title">Dokončajte nastavitev telefona PixysOS</string>
+    <string name="deferred_setup_wizard_title">Dokončajte nastavitev telefona Evolution X</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">Nastavitev telefona PixysOS</string>
+    <string name="setup_wizard_title">Nastavitev telefona Evolution X</string>
 </resources>
