--- a/overlay/PixelSetupWizardSpacewar/res/values-te/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values-te/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bc_welcome_message">మీ Nothingకు స్వాగతం</string>
-    <string name="deferred_setup_wizard_title">PixysOSను సెటప్ చేయడం ముగించండి</string>
+    <string name="deferred_setup_wizard_title">Evolution Xను సెటప్ చేయడం ముగించండి</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">PixysOS సెటప్</string>
+    <string name="setup_wizard_title">Evolution X సెటప్</string>
 </resources>
