--- a/overlay/PixelSetupWizardSpacewar/res/values/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bc_welcome_message">Welcome to your Nothing</string>
-    <string name="deferred_setup_wizard_title">Finish setting up PixysOS</string>
+    <string name="deferred_setup_wizard_title">Finish setting up Derp-AOSP</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">PixysOS Setup</string>
+    <string name="setup_wizard_title">Derp-AOSP Setup</string>
 </resources>
