--- a/overlay/PixelSetupWizardSpacewar/res/values/strings.xml
+++ b/overlay/PixelSetupWizardSpacewar/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="bc_welcome_message">Welcome to your Nothing</string>
     <string name="deferred_setup_wizard_title">Finish setting up PixysOS</string>
     <string name="device_name">Nothing Phone (1)</string>
-    <string name="setup_wizard_title">PixysOS Setup</string>
+    <string name="setup_wizard_title">Matrixx Setup</string>
 </resources>
